[project]
authors = [
  { name = "Jakob Nybo Nissen", email = "jakobnybonissen@gmail.com" },
  { name = "Henry Webel", email = "henry.webel@sund.ku.dk" },
]
description = "A small example package"
name = "rasmussenlab-mockup"
# This means: Load the version from the package itself.
# See the section below: [tools.setuptools.dynamic]
dynamic = ["version"]
readme = "README.md"
# We use features for Python 3.11, so we test it here.
requires-python = ">=3.11"
# These are keywords
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
"Bug Tracker" = "https://github.com/RasmussenLab/python_package/issues"
"Homepage" = "https://github.com/RasmussenLab/python_package"

[project.optional-dependencies]
docs = [
  "sphinx",
  "sphinx-book-theme",
  "myst-nb",
  "ipywidgets",
  "sphinx-new-tab-link!=0.2.2",
  "jupytext",
]
dev = ["black", "ruff", "pytest"]

# Configure the Ruff linter: Ignore error number 501
[tool.ruff]
lint.ignore = ["E501"]

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64", "setuptools_scm>=8"]

[tool.setuptools_scm]
# https://setuptools-scm.readthedocs.io/ 
# used to pick up the version from the git tags or the latest commit.
